compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__unknown_variable_update.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1604
expression: "\npub type Person {\n  Person(name: String, age: Int)\n}\npub fn update_person() {\n  Person(..person)\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub type Person {
  Person(name: String, age: Int)
}
pub fn update_person() {
  Person(..person)
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:6:12
  │
6 │   Person(..person)
  │            ^^^^^^ Did you mean `Person`?

The name `person` is not in scope here.
